Fixed a lot of English mistakes.

--- a/gemini/index.gmi
+++ b/gemini/index.gmi
@@ -10,9 +10,9 @@
 
 ## What to find here
 
-On this blog I mainly speak about DevOps or programming related subjects that touch too many part of a system to be included in a git repository.
+On this blog, I mainly speak about DevOps or programming-related subjects that touch too many parts of a system to be included in a git repository. 
 
-If you want to see nicer things I made, I should redirect you to my Github.
+If you want to see the nicer things I made, I should redirect you to my Github.
 
 => https://github.com/Arkaeriit github.com/Arkaeriit
 
