--- a/gemini/posts/Git-server.gmi
+++ b/gemini/posts/Git-server.gmi
@@ -12,13 +12,13 @@ This is quite a recent software so there is not a lot of documentation on how to
 
 ### Port forwarding
 
-As we want to access out Git server from the outside, the first step is to enable port forwarding. I have chosen to use the default port for Soft Serve which is 23231 so I enabled port forwarding for port 23231 of the internet to port 23231 of my machine on my LAN.
+As we want to access our Git server from the outside, the first step is to enable port forwarding. I have chosen to use the default port for Soft Serve which is 23231 so I enabled port forwarding for port 23231 of the internet to port 23231 of my machine on my LAN.
 
-Soft Serve uses SSH for communication with the external world so there is no need to mess with Nginx proxies or what not.
+Soft Serve uses SSH for communication with the external world so there is no need to mess with Nginx proxies or whatnot.
 
 ### Download and installation
 
-On the Github page of Soft Serve there is releases[2] for a lot of different platform. But you can also compile the software for source if you have go 1.16.1 installed. Once compiled, you just have to copy the binary `soft` in the folder you want (I put it in `/usr/local/bin/soft`) and it should work.
+On the Github page of Soft Serve there are releases[2] for a lot of different platforms. But you can also compile the software for source if you have go 1.16.1 installed. Once compiled, you just have to copy the binary `soft` in the folder you want (I put it in `/usr/local/bin/soft`) and it should work.
 
 => https://github.com/charmbracelet/soft-serve/releases/ 2: github.com/charmbracelet/soft-serve/releases/
 
@@ -33,7 +33,6 @@ After=network.target
 
 [Service]
 Type=simple
-# Another Type: forking
 User=root
 Group=root
 WorkingDirectory=/srv/data/soft-serve
@@ -52,12 +51,12 @@ I stored the service file at the path `/etc/systemd/system/soft-serve.service`. 
 
 Once the server is launched you can test it with the command `ssh localhost -p 23231`. You should be greeted by a tasteful TUI. Here, you can copy the command `git clone ssh://localhost:23231/config` which will be used to configure Soft Serve. Use this command to clone the configuration repository. In this repository, edit the file `config.yaml` configure the server.
 
-As I want to open the git server to the world but only let me and few other peoples edit the code in the repositories, there is multiple fields in the configuration I need to change.
+As I want to open the git server to the world but only let me and a few other people edit the code in the repositories, there are multiple fields in the configuration I need to change.
 
 * host: As I want to log to the git server with an URL, I must change the host to match this URL. Thus, I set it to `git.bobignou.red`.
-* anon-access: As I want to only let a small set of user to edit repositories but II also want to let anyone read them I set the field anon-access to `read-only`.
+* anon-access: As I want to only let a small set of users edit repositories but II also want to let anyone read them I set the field anon-access to `read-only`.
 * allow-keyless: This field must stay to false because I don't want anyone to be able to freely use the Git server.
-* users: To choose which users are allowed to edit the repositories, I must fill in the list of user, and copy-paste their public keys for them to be identified. Here is a dummy example of a dummy user:
+* users: To choose which users are allowed to edit the repositories, I must fill in the list of users, and copy-paste their public keys for them to be identified. Here is a dummy example of a dummy user:
 
 ```
 users:
@@ -75,7 +74,7 @@ As of now, there is not much to customize the look and feel of the TUI. We can s
 
 ## Usage
 
-Once the setup is finished, most of the work is done. From here, the information on the project's GitHub `README.md` are enough to use the server but I still want to detail them.
+Once the setup is finished, most of the work is done. From here, the information on the project's GitHub `README.md` is enough to use the server but I still want to detail them.
 
 ### Pushing a new repository on Soft Serve
 
@@ -83,17 +82,17 @@ Pushing a new repository on the server is trivial. On your local machine, simply
 
 ### Using the TUI
 
-To browse the repositories on Soft Serve, the TUI is very convenient. By typing `ssh -p 23231 git.bobignou.red` I can easily see all the repository I pushed and their `README.md`. The command used to clone the repository is written in the to right box which is really neat.
+To browse the repositories on Soft Serve, the TUI is very convenient. By typing `ssh -p 23231 git.bobignou.red` I can easily see all the repository I pushed and their `README.md`. The command used to clone the repository is written in the right box which is really neat.
 
-In the comments of the file `config.yaml` it is written that only the repositories listed in the configuration file. In the version of Soft Serve that I use (`0.1.0`) this is not the case, all the pushed repositories are displayed in the TUI.
+In the comments of the file `config.yaml` it is written that only the repositories listed in the configuration file are shown in the TUI. In the version of Soft Serve that I use (`0.1.0`) this is not the case, all the pushed repositories are displayed in the TUI.
 
 ### Using the local repository
 
-Once all of this is done, you can use the remote just as any other remote Git server such as GitHub, GitLab or Gitolite.
+Once all of this is done, you can use the remote just as any other remote Git server such as GitHub, GitLab, or Gitolite.
 
 ## Web interface
 
-By default, Soft Serve only presents a SSH interface. It is a very nice SSH interface but it is a bit of a shame that there is no web interface. To fix this, I made Soft Serve Monitor[3]. This is a Flask server that presents a web page with a list of all the repositories on the Soft Serve sever.
+By default, Soft Serve only presents an SSH interface. It is a very nice SSH interface but it is a bit of a shame that there is no web interface. To fix this, I made Soft Serve Monitor[3]. This is a Flask server that presents a web page with a list of all the repositories on the Soft Serve sever.
 
 => https://github.com/Arkaeriit/Soft-Serve_Monitor 3: Soft-Serve_Monitor
 
