--- a/gemini/posts/Running-this-server.gmi
+++ b/gemini/posts/Running-this-server.gmi
@@ -1,10 +1,10 @@
 # Running this server
 
-Multiples tools and components are used in this server to make it run and accessible from the internet. I want to describe them here in order to help me reconfigure a similar server in the future if needed. It might also be useful to anyone searching to run a similar web server themselves.
+Multiples tools and components are used in this server to make it run and accessible from the internet. I want to describe them here to help me reconfigure a similar server in the future if needed. It might also be useful to anyone searching to run a similar web server themselves.
 
 ## Domain name
 
-In order to easily access the server for the outside, a domain name is very handy I purchased bobignou.red at Namecheap[1]. There is a lot of other alternative but I am telling that because I used use some of their other services.
+In order to easily access the server for the outside, a domain name is very handy I purchased bobignou.red at Namecheap[1]. There is a lot of other alternatives but I am telling you that because I use some of their other services.
 
 => https://www.namecheap.com/ 1: www.namecheap.com
 
@@ -16,7 +16,7 @@ To do so, I use a combination of Namecheap's advanced DNS and DDclient.
 
 ### Namecheap's advanced DNS
 
-On the page to manage a domain name in Namecheap website, there is an 'Advanced DNS' page. At the bottom of this page, there is a 'Dynamic DNS' category. Firstly, you should enable it with the little oval button. You are given a Dynamic DNS Password, write it down. Lastly, you must add a record for each subdomain you want to use. To do so, press the 'add new record' button. Under the 'Host' column, you can can write the name of the subdomain (for example, `@` for `bobignou.red` or `www` for `www.bobignou.red`) and you should write a dummy IP in the 'Value' column.
+On the page to manage a domain name in the Namecheap website, there is an 'Advanced DNS' page. At the bottom of this page, there is a 'Dynamic DNS' category. Firstly, you should enable it with the little oval button. You are given a Dynamic DNS Password, write it down. Lastly, you must add a record for each subdomain you want to use. To do so, press the 'add new record' button. Under the 'Host' column, you can write the name of the subdomain (for example, `@` for `bobignou.red` or `www` for `www.bobignou.red`) and you should write a dummy IP in the 'Value' column.
 
 ### DDclient
 
@@ -31,12 +31,12 @@ password='<Dynamic DNS Password>'
 <Host>
 ```
 
-Write one of such configuration for each subdomain.
+Write one of such configurations for each subdomain.
 
 Then, you can start dd client with systemd through the commands `systemctl enable ddclient` and `systemctl start ddclient`. You can check that it works well in two ways.
 
 * You can check the result of `systemctl status ddclient`.
-* You can verify that your IP have been added in the column 'Value' in Namecheap's advanced DNS.
+* You can verify that your IP has been added in the column 'Value' in Namecheap's advanced DNS.
 
 ## SSL certificates
 
@@ -44,9 +44,9 @@ In order to use HTTPS, you need SSL certificates. Fortunately, a tool named cert
 
 Then you just have to type the command `certbot certonly --standalone -d <your first domain name> -d <your second domain name> ...` and follow the steps.
 
-## The Nginx web server
+## The Nginx webserver
 
-I Use Nginx as the web server. Each interface is in a `server` block. All those blocks are in a `http` block. I did not customized the `http` block, I kept the default one which work. The file for this blocks are in the folder `/srv/data/www/blog`. The layout of the file system is the same as the layout of the website.
+I use Nginx as the webserver. Each interface is in a `server` block. All those blocks are in a `http` block. I did not customize the `http` block, I kept the default one which work. The files for these blocks are in the folder `/srv/data/www/blog`. The layout of the file system is the same as the layout of the website.
 
 ### Basic HTTP server
 
@@ -86,7 +86,7 @@ Once again, it is very simple.
 
 ### HTTPS server
 
-As we are in the 21st century, I wanted to also present a HTTPS server. Its configuration is the following:
+As we are in the 21st century, I wanted to also present an HTTPS server. Its configuration is the following:
 
 ```
 server {
@@ -141,7 +141,6 @@ After=network.target
 
 [Service]
 Type=simple
-# Another Type: forking
 User=root
 Group=root
 WorkingDirectory=/srv/data/www/cyberland
@@ -188,6 +187,6 @@ It looks a lot like the configuration of the reverse proxy for the blog.
 
 ## Website generation
 
-The pages in this we website are generated with hexo[2]. I mostly used the default configuration by following the steps in the official documentation.
+The pages in this website are generated with hexo[2]. I mostly used the default configuration by following the steps in the official documentation.
 
 => https://github.com/hexojs/hexo 2: github.com/hexojs/hexo
