Added back to homepage on Gemlog

--- a/gemini/posts/BouingBouing.gmi
+++ b/gemini/posts/BouingBouing.gmi
@@ -3,3 +3,6 @@
 BouingBouing is a cute seal that loves to bounce on the ice caps.
 
 => https://bobignou.red/2021/10/28/BouingBouing/BouingBouing.gif BouingBouing [IMG]
+
+=> ../index.gmi Back to homepage
+
