--- a/gemini/posts/primes.gmi
+++ b/gemini/posts/primes.gmi
@@ -1014,3 +1014,6 @@ For the sake of convenience, you can find below a list of the first 1000 primes 
 * 7901
 * 7907
 * 7919
+
+=> ../index.gmi Back to homepage
+
