--- a/gemini/index.gmi
+++ b/gemini/index.gmi
@@ -1,5 +1,6 @@
 # Bobignou.red
 
+=> posts/DevTerm-R-01-Review.gmi                                      2022-10-18 - DevTerm R-01 Review
 => posts/G-forces-at-Disneyland-Paris.gmi                             2022-05-20 - G-forces at Disneyland Paris
 => posts/Writing-Hello-world-from-scratch-part-I-making-a-new-ISA.gmi 2022-05-06 - Writing Hello world from scratch part I: making a new ISA
 => posts/Making-a-Vim-plugin-with-Python.gmi                          2022-04-25 - Making a Vim plugin with Python
