--- a/gemini/index.gmi
+++ b/gemini/index.gmi
@@ -32,7 +32,7 @@ I also host my personal Git server.
 If you want some fun, you could always type the command:
 
 ```
-ssh -p 2244 snake@bobignou.red
+ssh snake@bobignou.red
 ```
 
 ## Contact
