Fix info about multiple hosts.

--- a/gemini/posts/Running-this-server.gmi
+++ b/gemini/posts/Running-this-server.gmi
@@ -28,10 +28,8 @@ protocol=namecheap
 server=dynamicdns.park-your-domain.com
 login=<domain name>
 password='<Dynamic DNS Password>'
-<Host>
+<Host1>, <Host2>, ...
 ```
-
-Write one of such configurations for each subdomain.
 
 Then, you can start dd client with systemd through the commands `systemctl enable ddclient` and `systemctl start ddclient`. You can check that it works well in two ways.
 
